--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,18 @@
 
-/* Your CSS Code here. */
+/* Styling for block elements */
+[data-ns-test="block-inline-div"],
+[data-ns-test="block-inline-p"],
+[data-ns-test="block-inline-h1"] {
+    display: block;
+}
+
+/* Styling for inline elements */
+[data-ns-test="block-inline-span"],
+[data-ns-test="block-inline-input"],
+[data-ns-test="block-inline-cite"],
+[data-ns-test="block-inline-code"],
+[data-ns-test="block-inline-sup"],
+[data-ns-test="block-inline-sub"],
+[data-ns-test="block-inline-button"] {
+    display: inline;
+}
